--- a/src/app/layout/header/components/input-search/input-search.component.html
+++ b/src/app/layout/header/components/input-search/input-search.component.html
@@ -3,6 +3,6 @@
         <mat-icon class="text-gray-600" svgIcon="ic_search"></mat-icon>
     </div>
     <input [formControl]="searchControl" type="text" id="simple-search" (keyup.enter)="enter()"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary focus:border-primary block w-full pl-10 p-2.5  dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary dark:focus:border-primary"
         placeholder="Tìm kiếm....">
 </div>
