--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="w-full">
+    <tmp-tabs class="w-full"></tmp-tabs>
     <ng-container *ngIf="items$ | async as items">
         <tmp-card class="" *ngFor="let item of items;" [item]="item"></tmp-card>
     </ng-container>
